[project]
name = "planning-applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "pydantic>=2.10.2",
    "scrapy-zyte-api>=0.25.1",
    "scrapy>=2.12.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 119
lint.ignore = ["F401"]
